# atlas-session-lifecycle

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SKILL-current.md  SKILL.md  chatGPTConvo.md  index.html  install.sh  release-please-config.json  session-init.py
.githooks/: pre-commit
.github/workflows/: ci.yml  claude-review.yml  release-please.yml
.taskmaster/docs/: prd.md
.taskmaster/tasks/: tasks.json
docs/: CLAUDE_CODE_HOOKS_TECHNICAL_REFERENCE.md  COMPETITIVE-INDEX.md  HOOKS_QUICK_REFERENCE.md  HOOKS_RESEARCH_INDEX.md  HOOKS_RESEARCH_SUMMARY.md  RESEARCH_COMPLETION_REPORT.md  competitive-landscape.md  executive-summary-soul-loop.md  market-strategy.md  unique-value-proposition.md
docs/archive/: doubt.md
docs/cline-submission/: README.md  SUBMISSION.md  marketplace-listing.md
docs/plans/: 2026-02-10-skill-init-vnext-design.md  2026-02-13-session-hooks-implementation.md  2026-02-24-start-ecosystem-fix-design.md
session-context/: .gitignore  CLAUDE-activeContext.md  CLAUDE-decisions.md  CLAUDE-patterns.md  CLAUDE-soul-purpose.md  CLAUDE-troubleshooting.md
skills/start/: SKILL.md
skills/stop/: SKILL.md
skills/sync/: SKILL.md
src/: pyproject.toml
src/atlas_session/: license.py  server.py  stripe_client.py
src/atlas_session/contract/: verifier.py
src/atlas_session/session/: operations.py  tools.py
src/atlas_session/stripe/: tools.py
tests/: conftest.py
tests/integration/: test_contract_lifecycle.py  test_lifecycle_flows.py  test_mcp_protocol.py
tests/unit/: test_common.py  test_contract_operations.py  test_session_operations.py  (+1 more)
(+3 files in other folders)
